// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display component Details returned Given useDetails returns data, component renders 1`] = `
<div>
  <div
    class="ui card"
  >
    <div
      class="content"
    >
      <img
        class="ui small right floated image"
        data-testid="cardThumbnail"
        src="http://tempuri/thumbnail"
      />
      <div
        class="header"
        data-testid="cardHeader"
      >
        Test
         
        User
      </div>
    </div>
  </div>
  <a
    href="/"
  >
    Start again
  </a>
</div>
`;

exports[`Display component No details returned Given useDetails returns null, component does not render 1`] = `
<div>
  <div
    class="ui negative message"
  >
    <div
      class="header"
    >
      Something has gone wrong with your search
    </div>
    <a
      href="/"
    >
      Start again
    </a>
  </div>
</div>
`;
